[package]
name = "rust_ssr_gameengine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
uuid = "1.6.1"
actix-files = "0.6.2"
env_logger = "0.10.1"
log = "0.4.20"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
base64 = "0.21.5"
